tests/expectations/parser/finalize/mapping_fail.out
Error [EPAR0370047]: expected mapping name
    --> test:3:13
     |
   3 |     mapping u8: u8 => u8;
     |             ^^
Error [EPAR0370005]: expected '=>' -- found '->'
    --> test:5:22
     |
   5 |     mapping foo: bar -> baz;
     |                      ^^
Error [EPAR0370005]: expected ')' -- found '=>'
    --> test:7:23
     |
   7 |     mapping foo: (bar => baz);
     |                       ^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script' -- found ')'
    --> test:7:29
     |
   7 |     mapping foo: (bar => baz);
     |                             ^
Error [EPAR0370005]: expected ']' -- found '->'
    --> test:9:23
     |
   9 |     mapping foo: [bar -> baz];
     |                       ^^
Error [EPAR0370005]: expected ';' -- found ']'
    --> test:9:29
     |
   9 |     mapping foo: [bar -> baz];
     |                             ^
Error [EPAR0370005]: expected ':' -- found 'bar'
    --> test:11:17
     |
  11 |     mapping foo bar => baz;
     |                 ^^^
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> test:7:18
     |
   7 |     mapping foo: (bar => baz);
     |                  ^^^^^
